force-app/main/default/objects/WC_Code__c/WC_Code__c.object-meta.xml
<CustomObject>
    <label>WC Code</label>
    <nameField>
        <label>WC Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>