force-app/main/default/objects/WC_Code__c/fields/Carrier_Covered__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Covered__c</fullName>
    <label>Carrier Covered</label>
    <summaryForeignKey>Carrier_WC_Rate__c.WC_Code__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>