force-app/main/default/objects/WC_Code__c/fields/Comp_Name__c.field-meta.xml
<CustomField>
    <fullName>Comp_Name__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comp Name</label>
    <type>Text</type>
</CustomField>