force-app/main/default/objects/WC_Code__c/fields/State_Comp_Codes__c.field-meta.xml
<CustomField>
    <fullName>State_Comp_Codes__c</fullName>
    <label>State Comp Codes</label>
    <summaryForeignKey>State_Comp_Code__c.WC_Code__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>