force-app/main/default/objects/WC_Code__c/listViews/National.listView-meta.xml
<ListView>
    <fullName>National</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>National__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>National__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>National</label>
</ListView>